@@ -1,3 +1,9 @@
+2007-02-19  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/mod_muc/mod_muc_room.erl: API improvement: Implementation of an
+	event to destroy MUC room from an external application (Thanks to
+        Massimiliano Mirra) (EJAB-184).
+
 2007-02-18  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/ejabberd_s2s.erl: Confirm to RFC3920 section 10.3 (thanks to
